--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@netlify/functions": "^1.3.0",
+    "@types/node": "^14.18.36",
+    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -18,7 +21,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "babel-preset-nano-react-app": "^0.1.0",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.4",
     "vite": "^3.2.1"
   }
 }
