--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@netlify/functions": "^1.3.0",
     "@types/node": "^14.18.36",
+    "aleopath": "file:aleopath",
     "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
